# C-backend-server-framework

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.cn.md  README.en.md  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: ApiSender.h  Channel.h  Coroutine.h  Crash.h  DBConnector.h  DuringTask.h  EmailSender.h  Handler.h  JsonObjectView.h  JsonValue.h  Log.h  RDConnector.h  Server.h  Threadpool.h  YamlParser.h  config.h  jwt.h  route.h
model/: Model.cpp  Model.h
src/: ApiSender.cpp  Channel.cpp  Config.cpp  Coroutine.cpp  Crash.cpp  DBConnector.cpp  DuringTask.cpp  EmailSender.cpp  JsonValue.cpp  Log.cpp  RDConnector.cpp  Server.cpp  Threadpool.cpp  config.cpp  jwt.cpp  route.cpp
src/handlers/: common_handler.cpp
